# nacm-rust-prototype

./: .gitignore  Cargo.toml  MULTIPLE_FILES_IMPLEMENTATION.md  MULTIPLE_FILES_PLAN.md  README.md  TWO_CRATE_PLAN.md
doc/: rfc-tailf-acm-proposal.md
examples/: README.md  bash_examples.sh  json_batch_example.sh  tailf_acm_comprehensive_demo.rs  tailf_acm_demo.rs  validate_access.rs
examples/data/: aaa_ncm_init_secure.xml  tailf_acm_example.xml
nacm-validator-bin/: Cargo.toml
nacm-validator-bin/examples/: bash_examples.sh  json_batch_example.sh
nacm-validator-bin/src/: main.rs
nacm-validator-lib/: Cargo.toml
nacm-validator-lib/examples/: readme_quick_start_test.rs  tailf_acm_demo.rs  validate_access.rs
nacm-validator-lib/examples/data/: aaa_ncm_init.xml
src/: lib.rs
