[package]
	name = "nacm-rust-prototype"
	version = "0.1.0"
	edition = "2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde-xml-rs = "0.6"
clap = { version = "4.0", features = ["derive"] }
serde_json = "1.0"

[[example]]
name = "validate_access"
path = "examples/validate_access.rs"

[[bin]]
name = "nacm-validator"
path = "src/bin/nacm-validator.rs"
