[package]
name = "nacm-validator-cli"
version = "0.1.0"
edition = "2021"
authors = ["T. Tornkvist <kruskakli@gmail.com>"]
license = "MPL-2.0"
description = "CLI for NACM (Network Access Control Model) validator with Tail-f ACM extensions"
readme = "../README.md"
homepage = "https://github.com/etnt/nacm-validator"
repository = "https://github.com/etnt/nacm-validator"
keywords = ["nacm", "netconf", "access-control", "cli", "validator"]
categories = ["network-programming", "authentication", "command-line-utilities"]
rust-version = "1.70"

[[bin]]
name = "nacm-validator"
path = "src/main.rs"
doc = false

[dependencies]
nacm-validator = "0.1"
clap = { version = "4.4", features = ["derive", "color"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
