[package]
name = "nacm-validator"
version = "0.1.0"
edition = "2021"
authors = ["T. Tornkvist <kruskakli@gmail.com>"]
license = "MPL-2.0"
description = "NACM (Network Access Control Model) validator with Tail-f ACM extensions"
readme = "../README.md"
homepage = "https://github.com/etnt/nacm-validator"
repository = "https://github.com/etnt/nacm-validator"
documentation = "https://docs.rs/nacm-validator"
keywords = ["nacm", "netconf", "access-control", "network", "yang"]
categories = ["network-programming", "authentication", "config"]
rust-version = "1.70"

[lib]
name = "nacm_validator"
path = "src/lib.rs"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde-xml-rs = "0.6"
